# csvconv

./: Dockerfile.build  INTEGRATION_TEST_REPORT.md  Makefile  PRD.txt  pyproject.toml  setup.py  tox.ini
scripts/: build_pex.sh
src/csvconv/: __init__.py  __main__.py  cli.py  converter.py  errors.py  logging_config.py  security.py  summary.py
src/csvconv/reader/: csv_reader.py  tar_reader.py
src/csvconv/schema/: inference.py  validation.py
src/csvconv/writer/: csv_writer.py  parquet_writer.py
tests/: conftest.py
tests/e2e/: test_pex.py
tests/integration/: test_cli_integration.py  test_csv_to_parquet.py  test_targz_to_csv.py  test_targz_to_parquet.py
tests/unit/: test_cli.py  test_converter.py  test_csv_reader.py  test_csv_writer.py  test_edge_cases.py  test_memory_bounded.py  test_parquet_writer.py  test_schema_inference.py  test_schema_validation.py  test_security.py  test_smoke.py  test_summary.py  test_tar_reader.py
